sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: type mismatch;
 found   : Unit
 required: Boolean
   if (test=0) {
           ^AlgCocktailSort3:17: error: not found: value break
     break
     ^